# FFV_SAAS

./: README.md  pyproject.toml
backend/: server.py
ffv_saas/: builder.py  chemops.py  converter.py  molec_manipulations.py  montecarlo.py
frontend/: index.html
