[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffv"
version = "0.0.1"
description = "Fractional free volume (ffv) analysis"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Brandon C. Tapia", email = "bctapia@mit.edu" },
  { name = "Zachary P. Smith", email = "zpsmith@mit.edu" }
]

dependencies = [
  "numpy",
  "pybel",
  "rdkit"]

keywords = ["membranes", "molecular separations", "polymer modeling"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics"]

[project.optional-dependencies]
dev = ["pytest", "black", "build", "twine"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."
]
[tool.black]
target-version = ["py312"]
line-length = 100
skip-magic-trailing-comma = true
exclude = '''
/(
    examples
)/
'''
